0.7.5 - Performance updates by caching immersive depth